# axum-api-server

./: .gitignore  Cargo.toml  README.md  env.template  requests.http
src/: database.rs  main.rs  todos.rs
src/blockchain/: ERC20Token.json  chainlinkAggrV3.json  contract_deploy.rs  mod.rs  simple_transactions.rs  simple_txn_live.rs  simple_txn_local.rs  wallet.rs
src/database/: mod.rs
src/routes/: database.rs  mod.rs  route_func.rs  todos.rs
src/utils/: mod.rs
