[package]
name = "axum-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.4", features = ["headers", "macros"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread", "full"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.3.5", features = ["add-extension", "trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
#sqlx = { version = "0.6.2", features = ["mysql", "runtime-tokio-native-tls"] }

# sea-orm has 3 drivers: sqlx-postgres, sqlx-mysql, sqlx-sqlite
sea-orm = { version = "0.11.0", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
dotenvy = "0.15.6"
validator = { version = "0.16.0", features = ["derive"] }
serde_with = "2.2.0"
chrono = { version = "0.4.23", features = ["serde"] }
bcrypt = "0.14.0"
jsonwebtoken = "8.2.0"
clap = { version = "4.1.4", features = ["derive"] }
ethers = { version = "1.0.2", features = ["legacy", "rustls"] }
ethers-solc = { version = "1.0.2", features = ["full"] }
ethers-providers = "1.0.2"
eyre = "0.6.8"
hex = "0.4.3"
reqwest = { version = "0.11.14", features = ["json"] }
serde_json = "1.0.93"
tempfile = "3.3.0"
error-chain = "0.12.4"
secp256k1 = { version = "0.26.0", features = ["rand"] }
tiny-keccak = "2.0.2"
anyhow = "1.0.69"
